# langextract-bedrock

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: example_run_entities_extract.py  quick_check.py  test.py
langextract_bedrock/: __init__.py  provider.py
